[tool.poetry]
name = "repl_python3_Fetal-Health-Classifier"
version = "0.1.0"
description = ""
authors = ["neeltron <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
